[gd_scene load_steps=4 format=3 uid="uid://b8pb4sxol0pqb"]

[ext_resource type="LabelSettings" uid="uid://tmu14jo4nq46" path="res://Scenes/combo/px_font_16.tres" id="1_5qtno"]
[ext_resource type="Script" path="res://Scenes/consecutive_hits/consecutive_hits.gd" id="1_i8rag"]
[ext_resource type="LabelSettings" uid="uid://cyegpx4j48xda" path="res://Scenes/score/px_font_24.tres" id="1_rrco7"]

[node name="ConsecutiveHits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8rag")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 529.0
offset_bottom = 129.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 124
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HitsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Consecutive Hits: [PlaceHolder]"
label_settings = ExtResource("1_rrco7")
vertical_alignment = 1

[node name="MultiplierLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplier: [PlaceHolder]"
label_settings = ExtResource("1_5qtno")
vertical_alignment = 1

[node name="ComboMultiplierLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Combo Multiplier: [PlaceHolder]"
label_settings = ExtResource("1_5qtno")
